// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fill(props) renders expected snapshot with edge 1`] = `
Object {
  "position": "absolute",
  "top": 0,
}
`;

exports[`fill(props) renders expected snapshot with no props 1`] = `
Object {
  "bottom": 0,
  "left": 0,
  "position": "absolute",
  "right": 0,
  "top": 0,
}
`;

exports[`fill(props) renders expected snapshot with position 1`] = `
Object {
  "bottom": 0,
  "left": 0,
  "position": "fixed",
  "right": 0,
  "top": 0,
}
`;
